CAR-2825 : Update JRE version to 8u252 to avoid java task being killed in container